# paste-shots

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: publish.yml
gnome-extension/legacy/paste-shots@zaiarn/: extension.js  metadata.json
gnome-extension/modern/paste-shots@zaiarn/: extension.js  metadata.json  stylesheet.css
scripts/: bench  paste-shots  paste-shots-tray
src/paste_shots/: __init__.py  cli.py  clipboard.py  config.py  core.py  errors.py  finders.py  floating.py  keys.py  notify.py  picker.py  pipeline.py  settings_dialog.py  shortcuts.py  tray_app.py  tray_ipc.py  watcher.py  window.py
tests/: conftest.py  helpers.py  test_cli_settable_keys.py  test_core.py
